<resources>
    <string name="app_name">Кинопоиск</string>
    <string name="login_app">Войти</string>
    <string name="registration_app">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="middle_name">Отчество</string>
    <string name="registration_title">Создай себе профиль и записывайся на бровки</string>
    <string name="registration_submit">Зарегистрировать</string>
    <string name="back">Назад</string>
    <string name="error_login">Пользователь не найден</string>
    <string name="error_password">Не правильный пароль</string>
    <string name="error_registration">Такой пользователь уже существует</string>
    <string name="error_required">Тут надо что-то вписать</string>
    <string name="make_order">Записаться</string>
    <string name="menu">Меню</string>
    <string name="Holder">Имя Фамилия</string>
    <string name="logout">Выйти</string>
    <string name="listOrder">Мои записи</string>
    <string name="procedure">Процедура</string>
    <string name="numberDefault">1</string>
    <string name="id">id</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="film_name">Название</string>
    <string name="film_country">Страна</string>
    <string name="next">Далее</string>
    <string name="page">Страница</string>
    <string name="time">Время</string>
    <string name="description">Описание</string>
    <string name="country">страны</string>
    <string name="owner">режисер</string>
</resources>