<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FilmCardLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/filnRatingLayout"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/filmMainPosterLayout"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/UserLayout">-->

<!--        <ImageView-->
<!--            android:id="@+id/star4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/star3"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:srcCompat="@drawable/ic_baseline_star_border_24" />-->

<!--        <ImageView-->
<!--            android:id="@+id/star1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:srcCompat="@drawable/ic_baseline_star_border_24" />-->

<!--        <ImageView-->
<!--            android:id="@+id/star2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/star1"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:srcCompat="@drawable/ic_baseline_star_border_24" />-->

<!--        <ImageView-->
<!--            android:id="@+id/star3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/star2"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:srcCompat="@drawable/ic_baseline_star_border_24" />-->

<!--        <ImageView-->
<!--            android:id="@+id/star5"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/star4"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:srcCompat="@drawable/ic_baseline_star_border_24" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filmMainPosterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserLayout">

        <ImageView
            android:id="@+id/main_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/UserLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="Денис Могилевский"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/deniska"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filmTittleLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filmMainPosterLayout"
        app:layout_constraintTop_toBottomOf="@+id/time">

        <TextView
            android:id="@+id/owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/owner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmNameEng" />

        <TextView
            android:id="@+id/filmName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/film_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filmNameEng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/film_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/filmName"
            app:layout_constraintTop_toBottomOf="@+id/filmName" />

        <TextView
            android:id="@+id/countrys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmMainPosterLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posterRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <!--    -->

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.Holo.Light.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/app_name"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="@color/orange"
        android:rating="2.5"
        android:stepSize="0.5"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/time"
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintStart_toEndOf="@+id/filmMainPosterLayout"
        app:layout_constraintTop_toTopOf="@+id/time" />

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="textEnd"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/filmTittleLayout"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/UserLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>